More alignment fixes

--- a/stylesheets/screen.scss
+++ b/stylesheets/screen.scss
@@ -168,6 +168,7 @@ form.bp {
         }
         padding:1em;
         margin:1em;
+        margin-top:0em;
         background-color:$header_color;
       }
   }
